-------------------------------------------------
CHANGELOG FOR track2rss v0.4
Written by Yakov Shafranovich

Copyright (C) 2005 SolidMatrix Technologies, Inc.
All rights reserved, see COPYING file for more.

A Project of SolidMatrix Research
Website: http://track2rss.sourceforge.net
Email:  research@solidmatrix.com
-------------------------------------------------

10/30/2005 v0.4
* Added gzip support to reduce bandwidth
* Change the output MIME type to 'text/xml'
* Added OpenSearch v1.0 support

01/26/2005 v0.3
* Added support for Fedex tracking

01/24/2005 v0.2
* Fixes for Firefox problems
* Fixes for version problems
* Added support for USPS tracking

01/19/2005 v0.1
* Initial Release

-------------------------------------------------
END-OF-FILE